description des modification

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <div class="logo">YEO <span>BÉNÉDICTE</span></div>
             <div class="menu">
                 <a href="index.html"><span>Accueil</span></a>
-                <a href="A_propos.html">A_propos</a>
-                <a href="projet.html">projet</a>
-                <a href="competences.html">competences</a>
-                <a href="contacts.html">contacts</a>
+                <a href="#A-propos">A-propos</a>
+                <a href="#projet">projet</a>
+                <a href="#competences">competences</a>
+                <a href="#contacts">contacts</a>
             </div>
         </nav>
         
@@ -25,7 +25,7 @@
             <div class="text">
                 <h1>Je suis Yeo <span>Bénédicte</span>,</h1>
                 <p>Développeuse en devenir, passionnée par l'aéronautique et le développement web !</p>
-                <a href="project.html" class="btn hover-scale">Voir mes projets</a>
+                <a href="#projet" class="btn hover-scale">Voir mes projets</a>
             </div>
             <div class="image">
                 <img src="3d-illustration-of-computer-programmer-coding-png.webp" alt="Développement web">
@@ -33,7 +33,7 @@
         </div>
     </section>
 
-    <section id="A_propos">
+    <section id="A-propos">
         <div class="container-apropos">
             <h2 class="titre-apropos hover-scale">A propos</h2>
         <div class="content">
@@ -148,6 +148,9 @@
         </form>
         </div>
     </section>
+    <!-- Bouton Retour en haut -->
+<button id="scrollToTopBtn" class="scroll-to-top-btn">↑</button>
+
     
 </body>
 <script src="script.js"></script>
