--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         </form>
         </div>
     </section>-->
-    <section id="contact" class="contact">
+    <section id="contacts" class="contact">
         <form action="" method="post" >
             <div class="form-content">
                 <h2 class="hover-scale">Vous avez un <span>projet en tête ?</span> <br>N'hésitez pas à me <span>contacter</span> </h2>
